--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
+IDEWorkspaceChecks.plist
 
 ## Other
 *.moved-aside
@@ -45,9 +46,9 @@ playground.xcworkspace
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# Pods/
-#
+
+Pods/
+
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
 
@@ -57,10 +58,6 @@ playground.xcworkspace
 # Carthage/Checkouts
 
 Carthage/Build
-
-# Accio dependency management
-Dependencies/
-.accio/
 
 # fastlane
 #
@@ -80,3 +77,6 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# R.swift
+**/R.generated.swift
